<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

            <ImageView
                android:id="@+id/iv_back_drop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:foreground="@color/transparent_black"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_backdrop" />

            <RelativeLayout
                android:id="@+id/rl_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="245dp"

                android:fitsSystemWindows="true">

                <ImageView
                    android:id="@+id/iv_movie_cover"
                    android:layout_width="170dp"
                    android:layout_height="220dp"
                    android:layout_margin="@dimen/margin_medium_2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_movie_cover_placeholder" />

                <TextView
                    android:id="@+id/tv_rating_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:background="@drawable/ic_favorite_accent_24dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:textColor="@color/white"
                    tools:text="@string/movie_rating" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/iv_movie_cover"
                    android:layout_alignRight="@id/iv_movie_cover"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:alpha="0.5"
                    android:background="@color/black"
                    android:padding="@dimen/margin_small"
                    android:src="@drawable/ic_crop_free_24dp"
                    android:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_movie_object"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/iv_movie_cover"
                    android:layout_marginLeft="@dimen/margin_medium_n"
                    android:layout_toRightOf="@id/iv_movie_cover"
                    android:text="@string/movie_object"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_regular_3x"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/tv_movie_object"
                    android:layout_below="@id/tv_movie_object">

                    <TextView
                        android:id="@+id/tv_movie_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:lineSpacingMultiplier="1.2"
                        android:text="@string/dummy_movie_overview"
                        android:textColor="@color/white" />
                </ScrollView>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                android:alpha="0.8"

                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/vp_popularity_bar"
                        layout="@layout/view_pod_popularity_bar"
                        android:layout_width="150dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/tv_released_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        tools:text="@string/released_date" />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/detail_color"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/movie_title_bg"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_medium_2"
                android:textColor="@color/detail_color"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold"
                tools:text="@string/movie_name" />

            <com.bnkk.padcmovieshelf.components.SmartRecyclerView
                android:id="@+id/rv_movie_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_name"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium" />

            <TextView
                android:id="@+id/tv_movie_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_movie_genre"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:background="@drawable/bg_rounded_border_orange"
                android:padding="@dimen/margin_medium"
                android:text="@string/movie_length"
                android:textColor="@color/white" />

            <com.bnkk.padcmovieshelf.components.SmartRecyclerView
                android:id="@+id/rv_movie_trailer_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_movie_length"
                android:layout_marginTop="@dimen/margin_medium"
                android:clipToPadding="false"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium_2" />

            <TextView
                android:id="@+id/lbl_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_movie_trailer_list"
                android:layout_margin="@dimen/margin_medium_2"
                android:text="@string/label_reviews"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <com.bnkk.padcmovieshelf.components.SmartRecyclerView
                android:id="@+id/rv_movie_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_reviews"
                android:layout_marginBottom="@dimen/margin_medium_2"
                android:layout_marginLeft="@dimen/margin_medium_2" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:src="@drawable/ic_add_24dp"
        android:tint="@color/white"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right" />

</android.support.design.widget.CoordinatorLayout>